Pages: Added pages folder with boilerplate data for both Panels. Added a way to change data on both panels through the Context provider

--- a/src/components/panel-left/styles.css
+++ b/src/components/panel-left/styles.css
@@ -37,6 +37,10 @@
     background-color: bisque;
 }
 
+.card-body {
+    overflow-y: scroll;
+}
+
 @keyframes slideLeft {
     from {
         width: var(--width-panel-left);
