--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -10,7 +10,6 @@
     position: absolute;
     height: 100vh;
     right: calc(7vw + 0.5em);
-    top: 0;
     z-index: 100;
     opacity: 0.9;
     box-shadow: -1.5px 0px 1px 1px lightgreen;
@@ -23,7 +22,7 @@
 #panel-right.open {
     animation: slideLeft 1000ms ease forwards;
     width: var(--width-panel-right);
-    opacity: 1;
+    opacity: 0.9;
 }
 #panel-right.close {
     animation: slideRight 1000ms ease forwards;
@@ -144,18 +143,16 @@
 
     to {
         width: var(--width-panel-right);
-        opacity: 1;
+        opacity: 0.9;
     }
 }
 @keyframes slideRight {
     from {
-        top: 0;
-        width: var(--width-panel-right);;
+        width: var(--width-panel-right);
         opacity: 0.9;
     }
 
     to {
-        position: relative!important;
         width: 0;
         opacity: 0;
     }
