--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@ html,body {
   /*Support for old browsers*/
   word-wrap: break-word;
 }
+
+/* Avoid animations on panels when loading*/
+.preload-prevent-animation *{
+  animation-duration: 0s !important;
+  -webkit-animation-duration: 0s !important;
+  transition: background-color 0s, opacity 0s, color 0s, width 0s, height 0s, padding 0s, margin 0s !important;
+} 
