--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -29,16 +29,18 @@
     width: 0;
     opacity: 0;
 }
-#panel-right .but-close{
+#panel-right.open .but-close{
     font-size: 2em;
     color: var(--color-text);
-    position: absolute;
     top: 0.5em;
     right: 1em;
     width: 1em;
     text-align: center;
     cursor: pointer;
     z-index: 100;
+}
+.but-close {
+    position: absolute;
 }
 
 .card-body {
