--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -23,11 +23,13 @@
     animation: slideLeft 750ms ease forwards;
     width: var(--width-panel-right);
     opacity: 0.9;
+    z-index: 150;
 }
 #panel-right.close {
     animation: slideRight 750ms ease forwards;
     width: 0;
     opacity: 0;
+    z-index: 5;
 }
 #panel-right.open .but-close{
     font-size: 2em;
