--- a/src/components/panel-left/styles.css
+++ b/src/components/panel-left/styles.css
@@ -2,7 +2,7 @@
     position: absolute;
     height: 100vh;
     width: 42vw;
-    background-color: gray;
+    background-color: var(--color-background-soft);
     left: 7vw;
     z-index: 50;
     opacity: 0.9;
@@ -28,11 +28,12 @@
 #panel-left .but-close{
     font-size: 2em;
     color: var(--color-text);
-    top: 0.5em;
+    /*top: 0.5em;*/
     right: 1em;
     width: 1em;
     text-align: center;
     cursor: pointer;
+    z-index: 200;
 }
 
 .card-body {
