--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -25,7 +25,7 @@
     right: 0;
     z-index: 100;
     opacity: 0.9;
-    box-shadow: -1.5px 0px 1px 1px lightgreen;
+    box-shadow: -1.5px 0px 1px 1px var(--color-background-soft);
 }
 #panel-right {
     width: var(--width-panel-right);
@@ -45,7 +45,6 @@
 #panel-right.open .but-close{
     font-size: 2em;
     color: var(--color-text);
-    top: 0.5em;
     right: 1em;
     width: 1em;
     text-align: center;
