PanelRight: Fixed visual glitch which caused button to not display correctly when going fullscreen

--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -86,10 +86,10 @@
     padding: 0;
 }
 .card-second.open {
-    animation: slideUp 750ms ease forwards;
+    animation: grow 750ms ease forwards;
 }
 .card-second.close {
-    animation: slideDown 750ms ease forwards;
+    animation: shrink 750ms ease forwards;
 }
 
 #but-playlist {
