--- a/src/components/panel-left/styles.css
+++ b/src/components/panel-left/styles.css
@@ -36,6 +36,15 @@
     z-index: 200;
 }
 
+.card-header h1 {
+    font-size: 2.25em;
+    font-weight: bold;
+    color: var(--color-text);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .card-body {
     overflow-y: scroll;
 }
