--- a/src/components/bar-left/styles.css
+++ b/src/components/bar-left/styles.css
@@ -15,6 +15,11 @@
     width: 100%;
 }
 
+.btn-star {
+    box-shadow: 0px 1px 3px 3px rgba(250, 250, 250, 0.6);
+    border: 1px solid var(--color-text);
+}
+
 @media (max-width: 767px) {
     .stack-container {
         width: 13vw;
