--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -9,6 +9,8 @@
     width: 4vw;
     height: 2em;
     z-index: 200;
+    box-shadow: -2px 1px 3px 3px rgba(250, 250, 250, 0.6);
+    border: 1px solid var(--color-text);
 }
 #but-slide-panel.open {
     animation: slideLeftBut 750ms ease forwards;
@@ -27,9 +29,18 @@
     z-index: 100;
     opacity: 1;
     box-shadow: -1.5px 0px 1px 1px var(--color-background-soft);
-}
-#panel-right {
+    overflow-x: clip;
     width: var(--width-panel-right);
+}
+#panel-right .card-header h1 {
+    color: var(--color-secondary);
+    text-transform: uppercase;
+}
+#panel-right .card-body h1, #panel-right .card-body h2{
+    color: var(--color-primary);
+}
+#panel-right .card-body h4, #panel-right .card-body h5, #panel-right .card-body h6{
+    color: var(--color-primary-soft);
 }
 #panel-right.open {
     animation: slideLeft 750ms ease forwards;
