--- a/src/components/panel-right/styles.css
+++ b/src/components/panel-right/styles.css
@@ -36,7 +36,7 @@
     color: var(--color-secondary);
     text-transform: uppercase;
 }
-#panel-right .card-body h1, #panel-right .card-body h2{
+#panel-right .card-body h1, #panel-right .card-body h2, #panel-right .card-body h3{
     color: var(--color-primary);
 }
 #panel-right .card-body h4, #panel-right .card-body h5, #panel-right .card-body h6{
@@ -63,6 +63,23 @@
     cursor: pointer;
     z-index: 100;
 }
+#panel-right.open figure {
+    margin-top: 2em;
+}
+#panel-right.open img{
+    max-height: 80%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+}
+#panel-right.open figcaption {
+    text-align: center;
+    font-weight: 600;
+    font-style: italic;
+}
+    
 .but-close {
     position: absolute;
 }
